--- a/cennik.html
+++ b/cennik.html
@@ -3,12 +3,14 @@
 Click nbfs://nbhost/SystemFileSystem/Templates/Licenses/license-default.txt to change this license
 Click nbfs://nbhost/SystemFileSystem/Templates/ClientSide/html.html to edit this template
 -->
-<html>
+<html lang="sk">
     <head>
         <title>Vila Flavia cenník - Ubytovanie Čierny Balog</title>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <meta name="keywords" content="Vila Flavia, ubytovanie, ubytovanie Čierny Balog, ubytovanie v súkromí, horehronie">
+        <meta name="description" content="Vila Flavia sa nachádza v rozľahlej obci Čierny Balog. Ponúka ubytovanie v súkromí pre maximálne 20 osôb. Súčasťou všetkých izieb je prístelka a kúpeľňa s toaletou a sprchovacím kútom. ">
+        <meta name="keywords" content="Vila Flavia, ubytovanie, ubytovanie Čierny Balog, ubytovanie v súkromí, horehronie, Nízke Tatry">
+        <link rel="canonical" href="https://martina-pr.github.io/vilaflavia.github.io/index.html"/>
         <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-Zenh87qX5JnK2Jl0vWa8Ck2rdkQ2Bzep5IDxbcnCeuOxjzrPF/et3URy9Bv1WTRi" crossorigin="anonymous">
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-OERcA2EqjJCMA+/3y+gxIOqMEjwtxJY7qPCqsdltbNJuaOe923+mo//f6V8Qbsw3" crossorigin="anonymous"></script>
         <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -51,7 +53,7 @@ Click nbfs://nbhost/SystemFileSystem/Templates/ClientSide/html.html to edit this
                 <li><span>3</span></li>
             </ul>
             <div class="logo">
-                <img class="logo" src="img/logo/logo-biela1.png" alt=""/>
+                <img class="logo" src="img/logo/logo-biela1.png" alt="logo"/>
             </div>                  
             <p class="text1"><strong>Ubytovanie, ktoré má<i class="fa-solid fa-heart fa-beat" style="--fa-animation-duratio: 2s;"></i></strong> !</p>
         </section>
