--- a/index.html
+++ b/index.html
@@ -3,12 +3,14 @@
 Click nbfs://nbhost/SystemFileSystem/Templates/Licenses/license-default.txt to change this license
 Click nbfs://nbhost/SystemFileSystem/Templates/Other/html.html to edit this template
 -->
-<html>
+<html lang="sk">
     <head>
         <title>Vila Flavia - Ubytovanie Čierny Balog</title>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <meta name="keywords" content="Vila Flavia, ubytovanie, ubytovanie Čierny Balog, ubytovanie v súkromí, horehronie">
+        <meta name="description" content="Vila Flavia sa nachádza v rozľahlej obci Čierny Balog. Ponúka ubytovanie v súkromí pre maximálne 20 osôb. Súčasťou všetkých izieb je prístelka a kúpeľňa s toaletou a sprchovacím kútom. ">
+        <meta name="keywords" content="Vila Flavia, ubytovanie, ubytovanie Čierny Balog, ubytovanie v súkromí, horehronie, Nízke Tatry">
+        <link rel="canonical" href="https://martina-pr.github.io/vilaflavia.github.io/index.html"/>
         <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-Zenh87qX5JnK2Jl0vWa8Ck2rdkQ2Bzep5IDxbcnCeuOxjzrPF/et3URy9Bv1WTRi" crossorigin="anonymous">
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-OERcA2EqjJCMA+/3y+gxIOqMEjwtxJY7qPCqsdltbNJuaOe923+mo//f6V8Qbsw3" crossorigin="anonymous"></script>
         <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -24,7 +26,7 @@ Click nbfs://nbhost/SystemFileSystem/Templates/Other/html.html to edit this temp
         <script src="vila-flavia.js" type="text/javascript"></script>
     </head>
     <body>
-        <header >
+        <header>
             <div class="nav-list-header">
                 <div class="menu-social">
                     <div><a href="https://www.facebook.com/vilaflaviaciernybalog" class="social-icon"><i class="fa-brands fa-square-facebook"></i></a></div>
@@ -50,7 +52,7 @@ Click nbfs://nbhost/SystemFileSystem/Templates/Other/html.html to edit this temp
                 <li><span>3</span></li>
             </ul>
             <div class="logo">
-                <img class="logo" src="img/logo/logo-biela1.png" alt=""/>
+                <img class="logo" src="img/logo/logo-biela1.png" alt="logo"/>
             </div>                  
             <p class="text1"><strong>Ubytovanie, ktoré má<i class="fa-solid fa-heart fa-beat" style="--fa-animation-duratio: 2s;"></i></strong> !</p>
         </section>
@@ -58,55 +60,55 @@ Click nbfs://nbhost/SystemFileSystem/Templates/Other/html.html to edit this temp
             <div class="uvod"  >
                 <p class="text2" style="flex-grow: 1"><strong>Vila Flavia</strong><br>sa nachádza v rozľahlej obci Čierny Balog, v srdci Veporských vrchov, asi 4 km južne od Brezna. Tvorí ju 13 osád, situovaných pozdĺž toku Čierneho Hrona a v priľahlých údoliach, obkolesených hustými lesmi.<br>
                     Disponuje piatimi izbami pre maximálne 20 osôb. K dispozícii sú tri 2-lôžkové a dve 4-lôžkové izby. Súčasťou všetkých izieb je prístelka a kúpeľňa s toaletou a sprchovacím kútom.
-                    <img class="border" src="img1/ikons/border2 (1).png" alt=""/>
+                    <img class="border" src="img1/ikons/border2 (1).png" alt="border"/>
                 </p>
                 <div class="foto" style="flex-grow: 1">
-                    <img  class="izba-foto1" src="img/exterier/budova700.png" alt=""/>
+                    <img  class="izba-foto1" src="img/exterier/budova700.png" alt="exterier-budova"/>
                 </div>
             </div>
         </section>
         <section class="container2" style="position: relative; height: auto;">
             <div class="uvod"  >
                 <div class="foto2" style="flex-grow: 1">
-                    <img class="foto3" src="img/exterier/budova-ex1.png" alt=""/>
+                    <img class="foto3" src="img/exterier/budova-ex1.png" alt="exterier-budova"/>
                 </div>
                 <p class="text3" style="flex-grow: 1" ><strong>Vila Flavia</strong><br>Vo vile máte k využitiu aj plne vybavenú kuchyňu spojenú s jedálňou a vináreň s posedením, televízorom a krbom. Niektoré izby majú aj balkón.  Deti sa zahrajú v detskom kútiku plnom hračiek. V exteriéri možno usporiadať grilovačku s varením gulášu pre cca 20 osôb. Svoje autá zaparkujete priamo pri objekte.
-                    <img class="border" src="img1/ikons/border2 (1).png" alt=""/>
+                    <img class="border" src="img1/ikons/border2 (1).png" alt="border"/>
                 </p>
             </div>  
         </section>       
         <section class="uvod2">
             <div class="grid-container">
                 <div class="item1">  
-                    <img src="img1/ikons/organization (2).png" alt=""/>
+                    <img src="img1/ikons/organization (2).png" alt="pocet osôb"/>
                     <p>Max. 20 osôb,<br> z toho 6 prísteliek</p>
                 </div>
                 <div class="item2">
-                    <img src="img1/ikons/bedroom (1).png" alt=""/>
+                    <img src="img1/ikons/bedroom (1).png" alt="pocet spální"/>
                     <p>5 spální</p>
                 </div>
                 <div class="item3">
-                    <img src="img1/ikons/bath (1).png" alt=""/>
+                    <img src="img1/ikons/bath (1).png" alt="pocet kúpelní"/>
                     <p>5 kúpeľní,<br>5 x WC</p>
                 </div>  
                 <div class="item4">
-                    <img src="img1/ikons/wifi-signal (1).png" alt=""/>
+                    <img src="img1/ikons/wifi-signal (1).png" alt="internet"/>
                     <p>Internet k dispozícii</p>
                 </div>
                 <div class="item5">
-                    <img src="img1/ikons/parking-sign (1).png" alt=""/>
+                    <img src="img1/ikons/parking-sign (1).png" alt="parkovanie"/>
                     <p>Parkovanie pri objekte</p>
                 </div>
                 <div class="item6">
-                    <img src="img1/ikons/puppy (1).png" alt=""/>
+                    <img src="img1/ikons/puppy (1).png" alt="domace zviera"/>
                     <p>POVOLENÝ,<br> bez obmedzenia, za poplatok </p>
                 </div>
                 <div class="item7">
-                    <img src="img1/ikons/family (2).png" alt=""/>
+                    <img src="img1/ikons/family (2).png" alt="pre rodiny"/>
                     <p>Vhodné pre rodiny s deťmi</p>
                 </div>
                 <div class="item8">
-                    <img src="img1/ikons/disabled (3).png" alt=""/>
+                    <img src="img1/ikons/disabled (3).png" alt="objekt"/>
                     <p>Objekt nie je bezbariérový</p>
                 </div>
             </div>
@@ -114,7 +116,7 @@ Click nbfs://nbhost/SystemFileSystem/Templates/Other/html.html to edit this temp
         <section class="uvod3">
             <div class="gallery-izba"> 
                 <div  class="hodnotenie">
-                    <img src="img/hodnotenie2 (1).png" alt=""/>
+                    <img src="img/hodnotenie2 (1).png" alt="hodnotenie"/>
                 </div>
                 <div class="hodnotenie-hauzi">
                     <p> 7. najlepšie hodnotená chata za posledných 12 mesiacov</p>
