--- a/okolie.html
+++ b/okolie.html
@@ -3,12 +3,14 @@
 Click nbfs://nbhost/SystemFileSystem/Templates/Licenses/license-default.txt to change this license
 Click nbfs://nbhost/SystemFileSystem/Templates/ClientSide/html.html to edit this template
 -->
-<html>
+<html lang="sk">
     <head>
         <title>Vila Flavia okolie - Ubytovanie Čierny Balog</title>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <meta name="keywords" content="Vila Flavia, ubytovanie, ubytovanie Čierny Balog, ubytovanie v súkromí, horehronie">
+        <meta name="description" content="Vila Flavia sa nachádza v rozľahlej obci Čierny Balog. Ponúka ubytovanie v súkromí pre maximálne 20 osôb. Súčasťou všetkých izieb je prístelka a kúpeľňa s toaletou a sprchovacím kútom. ">
+        <meta name="keywords" content="Vila Flavia, ubytovanie, ubytovanie Čierny Balog, ubytovanie v súkromí, horehronie, Nízke Tatry, Bystrianska jaskyňa">
+        <link rel="canonical" href="https://martina-pr.github.io/vilaflavia.github.io/index.html"/>
         <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-Zenh87qX5JnK2Jl0vWa8Ck2rdkQ2Bzep5IDxbcnCeuOxjzrPF/et3URy9Bv1WTRi" crossorigin="anonymous">
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-OERcA2EqjJCMA+/3y+gxIOqMEjwtxJY7qPCqsdltbNJuaOe923+mo//f6V8Qbsw3" crossorigin="anonymous"></script>
         <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -51,29 +53,29 @@ Click nbfs://nbhost/SystemFileSystem/Templates/ClientSide/html.html to edit this
                 <li><span>3</span></li>
             </ul>
             <div class="logo">
-                <img class="logo" src="img/logo/logo-biela1.png" alt=""/>
+                <img class="logo" src="img/logo/logo-biela1.png" alt="logo"/>
             </div>                  
             <p class="text1"><strong>Ubytovanie, ktoré má<i class="fa-solid fa-heart fa-beat" style="--fa-animation-duratio: 2s;"></i></strong> !</p>
         </section>
         <section class="container-okolie-ciernohronska-zeleznicka" style="position: relative; height: auto;">
             <div class="okolie-ciernohronska-zeleznicka"><p><strong>Čiernohronská železnica</strong></p><p>V súčasnosti <a class="okolie-ciernohronska-zeleznicka-odkaz" href="https://www.chz.sk/"><b>Čiernohronská železnica</b></a> premáva denne počas letnej turistickej sezóny. Prevádzka je zabezpečovaná na úseku trate z Chvatimechu do Čierneho Balogu, do Vydrovskej doliny a do Dobroče (spolu 19 km). V roku 2012 bola s podporou Európskej Únie otvorená obnovená trať z Čierneho Balogu do miestnej časti Dobroč. Mimoriadne jazdy je možné si objednať kedykoľvek! <br>  Lesná železnica, v minulosti odsúdená na zánik, dnes patrí k najvyhľadávanejším turistickým atrakciám v regióne.</p>
-                <p><img class="border" src="img1/ikons/border2 (1).png" alt=""/></p>
+                <p><img class="border" src="img1/ikons/border2 (1).png" alt="border"/></p>
             </div>
         </section>
         <section class="container-okolie-ciernohronska-zeleznicka-foto" style="position: relative; height: auto;">
             <div class="okolie-ciernohronska-zeleznicka-foto">
                 <div class="row">
                     <div class="column">
-                        <img src="img/zeleznicka-cyklodrezina/zeleznicka-1 (1).png" alt=""/>
+                        <img src="img/zeleznicka-cyklodrezina/zeleznicka-1 (1).png" alt="železnička"/>
                     </div>
                     <div class="column">
-                        <img src="img/zeleznicka-cyklodrezina/zeleznicka-3 (1).png" alt=""/>
+                        <img src="img/zeleznicka-cyklodrezina/zeleznicka-3 (1).png" alt="železnička"/>
                     </div>
                     <div class="column">
-                        <img src="img/zeleznicka-cyklodrezina/cyklodrezina-2 (1).png" alt=""/>
+                        <img src="img/zeleznicka-cyklodrezina/cyklodrezina-2 (1).png" alt="cyklodrezina"/>
                     </div>
                     <div class="column" >
-                        <img src="img/zeleznicka-cyklodrezina/cyklodrezina-1 (4).png" alt=""/>
+                        <img src="img/zeleznicka-cyklodrezina/cyklodrezina-1 (4).png" alt="cyklodrezina"/>
                     </div>
                 </div>
             </div>
@@ -81,29 +83,29 @@ Click nbfs://nbhost/SystemFileSystem/Templates/ClientSide/html.html to edit this
         <section class="container-okolie-cyklodrezina" style="position: relative; height: auto;">
             <div class="okolie-cyklodrezina">
                 <p><strong>Horehronské cyklodreziny</strong></p><p>Na úzkokoľajovej trati medzi obcami Hronec a Čierny Balog, kde premávala parná Čiernohronská železnička vznikol ďalší unikát. A to <a class="okolie-cyklodrezina-odkaz" href="https://horehronie.sk/cyklodreziny-hronec-sanske"><b>Horehronské cyklodreziny</b></a> (ľahké koľajové vozidlo, poháňané silou na princípe bicyklovania). Turisti ale aj domáci návštevníci sa tak môžu po prvý krát na Slovensku bicyklovať aj po koľajniciach.<br>Trasa vedie po železničnej trati lesnej úzkokoľajky Čiernohronskej železničky cez krasové územie popri meandroch Hrončianskej doliny s možnosťou prestupu na vláčik Čiernohronskej železničky počas hlavnej letnej sezóny, alebo piknikom v čarovnej prírode na zastávke Šánske s prístreškom.</p>
-                <p><img class="border" src="img1/ikons/border2 (1).png" alt=""/></p>
+                <p><img class="border" src="img1/ikons/border2 (1).png" alt="border"/></p>
             </div>  
         </section>
         <section class="container-okolie-vydrovo" style="position: relative; height: auto;">
             <div class="okolie-vydrovo">
                 <p><strong>Lesnícky skanzen Vydrovo</strong></p><p><a class="okolie-vydrovo-odkaz" href="https://sk.wikipedia.org/wiki/Lesn%C3%ADcky_skanzen_Vydrovo"><b>Lesnícky skanzen Vydrovo</b></a> je jedinečné lesnícke múzeum v prírode, situované vo Vydrovskej doline pri Čiernom Balogu.<br>Návštevníkom ponúka oddych, poučenie a zábavu prostredníctvom exponátov popri viac ako 4 km dlhom náučnom chodníku. Vystavené exponáty sa viažu na prácu lesných robotníkov a tak nechýbajú horáreň, kaplnka, dočasné príbytky a prístrešky, maringotky, mechanizmy a zariadenia využívané pri ťažbe dreva, parná lokomotíva so súpravou vagónov, no i vodná píla, lesná škôlka a edukačné centrum.</p>
-                <p><img class="border" src="img1/ikons/border2 (1).png" alt=""/></p>
+                <p><img class="border" src="img1/ikons/border2 (1).png" alt="border"/></p>
             </div>
         </section>
         <section class="container-okolie-vydrovo-foto" style="position: relative; height: auto;">
             <div class="okolie-vydrovo-foto">
                 <div class="row">
                     <div class="column">
-                        <img src="img/vydrovo-ski/lesnicky-skanzen-1.png" alt=""/>
+                        <img src="img/vydrovo-ski/lesnicky-skanzen-1.png" alt="skanzen"/>
                     </div>
                     <div class="column">
-                        <img src="img/vydrovo-ski/skanzen-1.png" alt=""/>
+                        <img src="img/vydrovo-ski/skanzen-1.png" alt="skanzen"/>
                     </div>
                     <div class="column">
-                        <img src="img/vydrovo-ski/ski-2.png" alt=""/>
+                        <img src="img/vydrovo-ski/ski-2.png" alt="vydrovo-ski"/>
                     </div>
                     <div class="column" >
-                        <img src="img/vydrovo-ski/ski-1.png" alt=""/>
+                        <img src="img/vydrovo-ski/ski-1.png" alt="vydrovo-ski"/>
                     </div>
                 </div>
             </div>
@@ -111,29 +113,29 @@ Click nbfs://nbhost/SystemFileSystem/Templates/ClientSide/html.html to edit this
         <section class="container-okolie-ski-cierny-balog" style="position: relative; height: auto;">
             <div class="okolie-ski-cierny-balog">
                 <p><strong>Ski Čierny Balog</strong></p><p>Lyžiarske stredisko <a class="okolie-ski-cierny-balog-odkaz" href="https://skiciernybalog.sk/"><b>Ski Čierny Balog</b></a> sa nachádza v nadmorskej výške 559 – 809. Od okresného mesta Brezno, je vzdialené len 10 km. Prepravu lyžiarov zabezpečujú 3 vleky. Ľahké a stredne náročné zjazdové trate dosahujú celkovú dĺžku 5 km. Stredisko má vybudovaný systém technického zasnežovania.<br>Pri vrchole tratí je počas sezóny prevádzkovaný bufet, v údolí koliba s regionálnymi špecialitami. Návštevníci strediska majú k dispozícii požičovňu a servis lyží a snowboardov, lyžiarsku a snb školu.</p>
-                <p><img class="border" src="img1/ikons/border2 (1).png" alt=""/></p>
+                <p><img class="border" src="img1/ikons/border2 (1).png" alt="border"/></p>
             </div>
         </section>
         <section class="container-okolie-bystrianska-jaskyna" style="position: relative; height: auto;">
             <div class="okolie-bystrianska-jaskyna">
                 <p><strong>Bystrianska jaskyňa</strong></p><p><a class="okolie-bystrianska-jaskyna-odkaz" href="https://sk.wikipedia.org/wiki/Bystrianska_jasky%C5%88a"><b>Bystrianska jaskyňa</b></a> je najväčšou jaskyňou južnej strany Nízkych Tatier. Nachádza sa v Bystrianskom krase v južnej časti Národného parku Nízke Tatry, pri obci Bystrá. <br>Tvorí ju Stará a Nová jaskyňa s celkovou dĺžkou vyše 3km a má priepasťový charakter. Prehliadková trasa má dĺžku 580 m a je takmer bez prevýšenia. Jaskyňa je prístupná aj pre imobilných návštevníkov. Prehliadka trvá 45 minút.<br>Niektoré časti podzemia Bystrianskej jaskyne sa využívajú aj na speleoterapiu.</p>
-                <p><img class="border" src="img1/ikons/border2 (1).png" alt=""/></p>
+                <p><img class="border" src="img1/ikons/border2 (1).png" alt="border"/></p>
             </div>
         </section>
         <section class="container-okolie-bystrianska-jaskyna-foto" style="position: relative; height: auto;">
             <div class="okolie-bystrianska-jaskyna-foto">
                 <div class="row">
                     <div class="column">
-                        <img src="img/bystrianska-tatry/bystrianska-jaskyna-1.png" alt=""/>
+                        <img src="img/bystrianska-tatry/bystrianska-jaskyna-1.png" alt="bystrianska jaskyna"/>
                     </div>
                     <div class="column">
-                        <img src="img/bystrianska-tatry/bystrianska-jaskyna-2.png" alt=""/>
+                        <img src="img/bystrianska-tatry/bystrianska-jaskyna-2.png" alt="bystrianska jaskyna"/>
                     </div>
                     <div class="column">
-                        <img src="img/bystrianska-tatry/nizke-tatry-2.png" alt=""/>
+                        <img src="img/bystrianska-tatry/nizke-tatry-2.png" alt="nizke tatry"/>
                     </div>
                     <div class="column" >
-                        <img src="img/bystrianska-tatry/nizke-tatry-1.png" alt=""/>
+                        <img src="img/bystrianska-tatry/nizke-tatry-1.png" alt="nizke tatry"/>
                     </div>
                 </div>
             </div>
@@ -141,13 +143,13 @@ Click nbfs://nbhost/SystemFileSystem/Templates/ClientSide/html.html to edit this
         <section class="container-okolie-nizke-tatry" style="position: relative; height: auto;">
             <div class="okolie-nizke-tatry">
                 <p><strong>Nízke Tatry</strong></p><p>Chopok, Ďumbier, Dereše, Poľana... Na potulkách za vrchmi <a class="okolie-nizke-tatry-odkaz" href="https://sk.wikipedia.org/wiki/N%C3%ADzke_Tatry"><b>Nízkych Tatier</b></a> zažijete úžasné túry s dokonalými výhľadmi.<br>Jedným zo symbolov Nízkych Tatier je Ďumbier. Ide o najvyšší štít celého pohoria (2043 m. n. m.), na vrchole ktorého tróni drevený dvojkríž.<br>V Národnom parku Nízke Tatry a jeho ochrannom pásme je peším turistom k dispozícii viac než 840 km značených turistických trás a 15 náučných chodníkov.</p> 
-                <p><img class="border" src="img1/ikons/border2 (1).png" alt=""/></p>
+                <p><img class="border" src="img1/ikons/border2 (1).png" alt="border"/></p>
             </div>
         </section>
         <section class="container-okolie-tipy" style="position: relative; height: auto;">
             <div class="okolie-tipy">
                 <p><strong>Tipy na výlety</strong></p><p>Región vďaka svojmu členitému terénu a rozmanitej prírode ponúka množstvo cyklotrás rôznej náročnosti, ktoré zaručujú  aktívny odpočinok pre náročných i rodiny s deťmi.<br>Kraj je známy aj množstvom kvalitných lyžiarskych či bežkárskych tratí a neskutočne bohatý na prírodné krásy, ale aj na turistické atrakcie, históriu a kultúru.<br>Horehronie, raj v Nízkych Tatrách, je tým dokonalým miestom pre aktívny oddych i relax.<p>Ďalšie tipy na výlety nájdete tu: <a href="https://www.horehronie.sk/"><b>Horehronie,</b> &nbsp; </a><a href="https://kamnahorehroni.sk/"><b>Kam na horehroní,</b> &nbsp; </a><a href="https://www.zahoramizadolami.sk/region-horehronie/?gclid=CjwKCAiA76-dBhByEiwAA0_s9bMNtrLBqC8POAq0rfXNLrJq14WdLbHGpc1qgw3MO5Ezt3NTI7W5xxoC1OwQAvD_BwE"><b>Za horami, za dolami.</b></a></p>
-                <p><img class="border" src="img1/ikons/border2 (1).png" alt=""/></p>
+                <p><img class="border" src="img1/ikons/border2 (1).png" alt="border"/></p>
             </div>
         </section>
         <footer>
