--- a/ubytovanie.html
+++ b/ubytovanie.html
@@ -3,12 +3,14 @@
 Click nbfs://nbhost/SystemFileSystem/Templates/Licenses/license-default.txt to change this license
 Click nbfs://nbhost/SystemFileSystem/Templates/ClientSide/html.html to edit this template
 -->
-<html>
+<html lang="sk">
     <head>
         <title>Vila Flavia - Ubytovanie Čierny Balog</title>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <meta name="keywords" content="Vila Flavia, ubytovanie, ubytovanie Čierny Balog, ubytovanie v súkromí, horehronie">
+        <meta name="description" content="Vila Flavia sa nachádza v rozľahlej obci Čierny Balog. Ponúka ubytovanie v súkromí pre maximálne 20 osôb. Súčasťou všetkých izieb je prístelka a kúpeľňa s toaletou a sprchovacím kútom. ">
+        <meta name="keywords" content="Vila Flavia, ubytovanie, ubytovanie Čierny Balog, ubytovanie v súkromí, horehronie, Nízke Tatry">
+        <link rel="canonical" href="https://martina-pr.github.io/vilaflavia.github.io/index.html"/>
         <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-Zenh87qX5JnK2Jl0vWa8Ck2rdkQ2Bzep5IDxbcnCeuOxjzrPF/et3URy9Bv1WTRi" crossorigin="anonymous">
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-OERcA2EqjJCMA+/3y+gxIOqMEjwtxJY7qPCqsdltbNJuaOe923+mo//f6V8Qbsw3" crossorigin="anonymous"></script>
         <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -59,7 +61,7 @@ Click nbfs://nbhost/SystemFileSystem/Templates/ClientSide/html.html to edit this
                 <li><span>3</span></li>
             </ul>
             <div class="logo">
-                <img class="logo" src="img/logo/logo-biela1.png" alt=""/>
+                <img class="logo" src="img/logo/logo-biela1.png" alt="logo"/>
             </div>                  
             <p class="text1"><strong>Ubytovanie, ktoré má<i class="fa-solid fa-heart fa-beat" style="--fa-animation-duratio: 2s;"></i></strong> !</p>
         </section>
@@ -67,27 +69,27 @@ Click nbfs://nbhost/SystemFileSystem/Templates/ClientSide/html.html to edit this
             <article class="izba-cislo-1">
                 <div class="text-izba-c-1" style="flex-grow: 1">
                     <p><strong>Izba č. 1</strong></p><p>Izba sa nachádza na 2. poschodí, je bez balkónu. Má 2 pevné lôžka + 1 prístelka. Izba má vlastné sociálne zariadenie.<br>1x Kúpeľňa: WC, Umývadlo, Sprchovací kút, Uteráky.<br> 
-                        <img class="border" src="img1/ikons/border2 (1).png" alt=""/></p>
+                        <img class="border" src="img1/ikons/border2 (1).png" alt="border"/></p>
                 </div>
                 <div class="thumbnails1">
                     <div class="figure1">
-                        <img src="img/izba1/izba1-3.jpg" alt="" style="width:100%"/>
+                        <img src="img/izba1/izba1-3.jpg" alt="izba č.1" style="width:100%"/>
                     </div>
                     <div class="row ">
                         <div  class="column">
-                            <img src="img/izba1/izba1-3.jpg" alt="" style="width:100%"/>
+                            <img src="img/izba1/izba1-3.jpg" alt="izba č.1" style="width:100%"/>
                         </div>
                         <div  class="column">
-                            <img src="img/izba1/izba1-4.jpg" alt="" style="width:100%"/>
+                            <img src="img/izba1/izba1-4.jpg" alt="izba č.1" style="width:100%"/>
                         </div>
                         <div  class="column">
-                            <img src="img/izba1/izba1-5.jpg" alt=""  style="width: 100%"/>
+                            <img src="img/izba1/izba1-5.jpg" alt="izba č.1"  style="width: 100%"/>
                         </div>
                         <div  class="column" >
-                            <img src="img/izba1/izba1-1.jpg" alt="" style="width:100%"/>
+                            <img src="img/izba1/izba1-1.jpg" alt="izba č.1" style="width:100%"/>
                         </div>
                         <div  class="column">
-                            <img src="img/izba1/izba1-6.jpg" alt="" style="width:100%"/>
+                            <img src="img/izba1/izba1-6.jpg" alt="izba č.1" style="width:100%"/>
                         </div>
                     </div>
                 </div>
@@ -101,23 +103,23 @@ Click nbfs://nbhost/SystemFileSystem/Templates/ClientSide/html.html to edit this
                 </div>
                 <div class="thumbnails2">
                     <div class="figure2">
-                        <img src="img/izba2/izba2-3.jpg" alt="" style="width:100%"/>
+                        <img src="img/izba2/izba2-3.jpg" alt="izba č.2" style="width:100%"/>
                     </div>
                     <div class="row ">
                         <div  class="column">
-                            <img src="img/izba2/izba2-3.jpg" alt="" style="width:100%"/>
+                            <img src="img/izba2/izba2-3.jpg" alt="izba č.2" style="width:100%"/>
                         </div>
                         <div  class="column">
-                            <img src="img/izba2/izba2.jpg" alt="" style="width:100%"/>
+                            <img src="img/izba2/izba2.jpg" alt="izba č.2" style="width:100%"/>
                         </div>
                         <div  class="column">
-                            <img src="img/izba2/izba2-4.jpg" alt=""  style="width: 100%"/>
+                            <img src="img/izba2/izba2-4.jpg" alt="izba č.2"  style="width: 100%"/>
                         </div>
                         <div  class="column" >
-                            <img src="img/izba2/izba2-2.jpg" alt="" style="width:100%"/>
+                            <img src="img/izba2/izba2-2.jpg" alt="izba č.2" style="width:100%"/>
                         </div>
                         <div  class="column">
-                            <img src="img/izba2/izba2-1.jpg" alt="" style="width:100%"/>
+                            <img src="img/izba2/izba2-1.jpg" alt="izba č.2" style="width:100%"/>
                         </div>
                     </div>
                 </div>
@@ -131,23 +133,23 @@ Click nbfs://nbhost/SystemFileSystem/Templates/ClientSide/html.html to edit this
                 </div>
                 <div class="thumbnails3">
                     <div class="figure3">
-                        <img src="img/izba3/izba3-1.jpg" alt="" style="width:100%"/>
+                        <img src="img/izba3/izba3-1.jpg" alt="izba č.3" style="width:100%"/>
                     </div>
                     <div class="row ">
                         <div  class="column">
-                            <img src="img/izba3/izba3-1.jpg" alt="" style="width:100%"/>
+                            <img src="img/izba3/izba3-1.jpg" alt="izba č.3" style="width:100%"/>
                         </div>
                         <div  class="column">
-                            <img src="img/izba3/izba3.jpg" alt="" style="width:100%"/>
+                            <img src="img/izba3/izba3.jpg" alt="izba č.3" style="width:100%"/>
                         </div>
                         <div  class="column">
-                            <img src="img/izba3/izba3-5.jpg" alt=""  style="width: 100%"/>
+                            <img src="img/izba3/izba3-5.jpg" alt="izba č.3"  style="width: 100%"/>
                         </div>
                         <div  class="column" >
-                            <img src="img/izba3/izba3-3.jpg" alt="" style="width:100%"/>
+                            <img src="img/izba3/izba3-3.jpg" alt="izba č.3" style="width:100%"/>
                         </div>
                         <div  class="column">
-                            <img src="img/izba3/izba3-2.jpg" alt="" style="width:100%"/>
+                            <img src="img/izba3/izba3-2.jpg" alt="izba č.3" style="width:100%"/>
                         </div>
                     </div>
                 </div>
@@ -161,23 +163,23 @@ Click nbfs://nbhost/SystemFileSystem/Templates/ClientSide/html.html to edit this
                 </div>
                 <div class="thumbnails4">
                     <div class="figure4">
-                        <img src="img/izba4/izba4-1.jpg" alt="" style="width:100%"/>
+                        <img src="img/izba4/izba4-1.jpg" alt="izba č.4" style="width:100%"/>
                     </div>
                     <div class="row ">
                         <div  class="column">
-                            <img src="img/izba4/izba4-1.jpg" alt="" style="width:100%"/>
+                            <img src="img/izba4/izba4-1.jpg" alt="izba č.4" style="width:100%"/>
                         </div>
                         <div  class="column">
-                            <img src="img/izba4/izba4-2.jpg" alt="" style="width:100%"/>
+                            <img src="img/izba4/izba4-2.jpg" alt="izba č.4" style="width:100%"/>
                         </div>
                         <div  class="column">
-                            <img src="img/izba4/izba4-4.jpg" alt=""  style="width: 100%"/>
+                            <img src="img/izba4/izba4-4.jpg" alt="izba č.4"  style="width: 100%"/>
                         </div>
                         <div  class="column" >
-                            <img src="img/izba4/izba4-3.jpg" alt="" style="width:100%"/>
+                            <img src="img/izba4/izba4-3.jpg" alt="izba č.4" style="width:100%"/>
                         </div>
                         <div  class="column">
-                            <img src="img/izba4/izba4-5.jpg" alt="" style="width:100%"/>
+                            <img src="img/izba4/izba4-5.jpg" alt="izba č.4" style="width:100%"/>
                         </div>
                     </div>
                 </div>
@@ -187,11 +189,11 @@ Click nbfs://nbhost/SystemFileSystem/Templates/ClientSide/html.html to edit this
             <article class="vinaren-jedalen-kutik-kuchyna">
                 <div class="kuchyna" style="flex-grow: 1" >
                     <p><strong>Kuchyňa</strong></p><p>Nachádza sa na 1. poschodí a je prepojená s jedálňou.<br>Vybavenie: Chladnička, Mikrovlnná rúra, Rýchlovarná kanvica, Jedálenské posedenie, Plynový sporák.</p>
-                    <p><img class="border" src="img1/ikons/border2 (1).png" alt=""/></p>
+                    <p><img class="border" src="img1/ikons/border2 (1).png" alt="border"/></p>
                 </div>
                 <div class="vinaren" style="flex-grow: 1">
                     <p><strong>Spoločenská miestnosť s vinárňou</strong></p><p>Vináreň so spoločenskou miestnosťou sa nachádza na prízemí.<br>Vybavenie: Jedálenské posedenie, Krb / Kachle, Televízor.</p>
-                    <p><img class="border" src="img1/ikons/border2 (1).png" alt=""/></p>
+                    <p><img class="border" src="img1/ikons/border2 (1).png" alt="border"/></p>
 
                 </div>
                 <!-- Start WOWSlider.com BODY section -->
@@ -232,11 +234,11 @@ Click nbfs://nbhost/SystemFileSystem/Templates/ClientSide/html.html to edit this
 
                 <div class="jedalen" style="flex-grow: 1">
                     <p><strong>Jedáleň</strong></p><p>Jedáleň sa nachádza na 1. poschodí. Je prepojená s kuchyňou.</p>
-                    <p><img class="border" src="img1/ikons/border2 (1).png" alt=""></p>
+                    <p><img class="border" src="img1/ikons/border2 (1).png" alt="border"></p>
                 </div>
                 <div class="detsky-kutik">
                     <p><strong>Detský kútik</strong></p><p>Nesmieme zabudnúť ani na tých najmenších.🙂Detský kútik plný hračiek sa nachádza na 1. poschodí.</p>
-                    <p><img class="border" src="img1/ikons/border2 (1).png" alt=""/></p>
+                    <p><img class="border" src="img1/ikons/border2 (1).png" alt="border"/></p>
 
                 </div>
             </article>  
